--- a/bookings.html
+++ b/bookings.html
@@ -6,13 +6,17 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <style>
-      .bookings-card {
+    .bookings-card {
     width: 80%; /* Adjust as needed */
     margin: 20px auto;
     }
 
     #bookings-table-body tr td {
       text-align: center;
+    }
+
+    .mdl-card__supporting-text {
+        overflow: scroll;
     }
     </style>
 </head>
