help icon added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <link rel="stylesheet" href="styles.css"> </head>
 <body>
+
+    <div class="mdl-shadow--2dp">
+        <div class="mdl-card__title">
+            <h2 style="text-align: center; display: inline-flex;" class="mdl-card__title-text">Infinite Scheduler</h2>
+        </div>
+    </div>
+
+
     <div id="calendar-container" class="mdl-card mdl-shadow--2dp">
         <div id="calendar-header" class="mdl-card__title">
             <button id="prev-month" class="mdl-button mdl-js-button mdl-button--icon" disabled><i class="material-icons">chevron_left</i></button>
@@ -109,6 +117,14 @@
       </div>
     </div>
 
+    <div class="help">
+        <a href="help.html"><img src="icons8-help-50.png" alt="Click to get help"></a>
+    </div>
+
+    <div class="courtesy">
+        <a target="_blank" href="https://icons8.com/icon/646/help">Help</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+    </div>
+    
     <script src="app.js"></script>
 </body>
 </html>
