--- a/bookings.html
+++ b/bookings.html
@@ -21,6 +21,13 @@
     </style>
 </head>
 <body>
+
+    <div class="mdl-shadow--2dp">
+        <div class="mdl-card__title">
+            <a href="index.html"><h2 style="text-align: center; display: inline-flex;" class="mdl-card__title-text">Infinite Scheduler</h2></a>
+        </div>
+    </div>
+
   <div class="mdl-card mdl-shadow--2dp bookings-card">
         <div class="mdl-card__title">
             <h2 class="mdl-card__title-text">Current Month Bookings</h2>
